# blueprintScript

./: .gitignore  CMakeLists.txt  GRAMMAR.txt  LLVM_METADATA.md  README.md
examples/: basic_suite.bps  fibonacci.bps  mod_exp.bps  parser_test.bps  validator_test.bps
src/: logger.hpp  main.cpp
src/analysis/: analysisContext.hpp  metadataInferer.cpp  metadataInferer.hpp  semanticValidator.cpp  semanticValidator.hpp  typeChecker.cpp  typeChecker.hpp  willReturnInferer.cpp  willReturnInferer.hpp
src/ast/: blueprintAST.hpp  blueprintAST_checks.cpp  commonAST.hpp  exprAST.hpp  exprAST_accept.cpp  exprAST_checks.cpp  functionAST.hpp  functionAST_accept.cpp  functionAST_checks.cpp  programAST.hpp  stmtAST.hpp  stmtAST_accept.cpp  stmtAST_checks.cpp
src/codegen/: codeGenVisitor.cpp  codeGenVisitor.hpp
src/elaboration/: elaborationPass.cpp  elaborationPass.hpp  expressionSimplifier.cpp  expressionSimplifier.hpp
src/lexer/: lexer.cpp  lexer.hpp  tokens.hpp
src/parser/: blueprintParser.cpp  exprParser.cpp  functionParser.cpp  parser.cpp  parser.hpp  stmtParser.cpp
tests/: expressionSimplifier_tests.cpp  expressionSimplifier_tests.hpp  metadataInferer_tests.cpp  metadataInferer_tests.hpp  test.cpp  test.hpp  willReturnInferer_tests.cpp  willReturnInferer_tests.hpp
