cmake_minimum_required(VERSION 3.23)

project(BlueprintScript LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

file(GLOB_RECURSE BLUEPRINTSCRIPT_SOURCES CONFIGURE_DEPENDS
    "${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp"
)

add_executable(BlueprintScript
    ${BLUEPRINTSCRIPT_SOURCES}
)

